...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            app:layout_constraintWidth_max="400dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/player_tag_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_tag_layout"
            app:layout_constraintWidth_max="400dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/add_account"
            android:padding="12dp"
            app:icon="@drawable/ic_add"
...
